@@ -11,6 +11,7 @@ Changes for 1.4.j:
 
 Changes for 1.4.3:
 
+ - [ZBX-70] fixed even more compilation warnings (Alexei)
  - [ZBX-69] eliminated compilation warnings "_GNU_SOURCE redefined" (Alexei)
  - [ZBX-1] fixed wrong status of function "nodata" after server restart (Sasha)
  - [ZBX-33] fixed problem in table names in data.sql for PostgreSQL (Sasha)
